# wgpu-hello-triangle-spirv

./: Cargo.toml  LICENSE  README.md
src/: frag.spv  main.rs  shader.frag  shader.vert  vert.spv
